--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 	<link rel="stylesheet" href="build/screen.css">
 </head>
@@ -20,10 +20,14 @@
 
 	<h1>Zahrajeme.cz!</h1>
 
+	<div id="map" style="width: 1000px; height: 600px"></div>
 
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="libs/jquery/dist/jquery.min.js"><\/script>')</script>
 	<script defer src="build/app.js"></script>
+
+	<script src="libs/leaflet/dist/leaflet.js"></script>
+	<script src="js/map.js"></script>
 </body>
 </html>
