--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
 
 	</style>
 	<link rel="stylesheet" href="build/screen.css">
+
+	<script src="build/app.js"></script>
 </head>
 <body>
 
@@ -127,12 +129,8 @@
 		</div>
 	</div>
 
-	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="libs/jquery/dist/jquery.min.js"><\/script>')</script>
-	<script defer src="build/app.js"></script>
-
 	<script src="libs/leaflet/dist/leaflet.js"></script>
 	<script src="js/map.js"></script>
+
 </body>
 </html>
