--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 	<style>
 		.search__box input[type="text"]{margin: 15px 0; padding: 0 10px;}
-		.list_group__box{padding: 0 14px; margin-top: 15px; box-shadow: none; }
+		.list_group__box{padding: 0 14px; margin-top: calc(100vh - 240px); box-shadow: none; }
 		.btn__play{text-decoration: none;}
 		.btn__play span.btn{ padding: 4px 2px;}
 		.navbar {border-radius: 0px;}
@@ -32,6 +32,29 @@
 
 		.radius--left{border-radius: 4px 0 0 4px !important;}
 		.radius--right{border-radius: 0 4px 4px 0 !important;}
+		body {
+			padding-left: 0px;
+			padding-right: 0px;
+			margin: 0;
+			height: 100%;
+		}
+
+		html {
+			height: 100%;
+		}
+
+
+		/* Map */
+		#map {
+			position: absolute;
+			top: 52px;
+
+			left: 0px;
+			bottom: 0px;
+			width: 100% !important;
+			z-index: 0;
+		}
+
 
 	</style>
 	<link rel="stylesheet" href="build/screen.css">
@@ -57,6 +80,7 @@
 		</div>
 	</nav>
 
+
 	<div class="container">
 		<div class="row">
 			<form role="form" action="">
@@ -74,8 +98,11 @@
 
 		</div>
 
-		<div id="map" style="width: 1000px; height: 600px"></div>
+</div>
 
+			<div id="map"></div>
+
+	<div class="container">
 		<div class="row">
 			<div class="list_group__box list-group">
 
