--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="mobile-web-app-capable" content="yes">
 
 	<style>
 		.search__box input[type="text"]{margin: 15px 0; padding: 0 10px;}
