--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 	<meta name="mobile-web-app-capable" content="yes">
 
 	<style>
+
 		.search__box input[type="text"]{margin: 15px 0; padding: 0 10px;}
 		.list_group__box{padding: 0 14px; margin-top: calc(100vh - 240px); box-shadow: none; }
 		.btn__play{text-decoration: none;}
@@ -29,32 +30,9 @@
 		.active__title{ display: inline-block; margin: 10px 20px 10px 0;}
 		.btn__callbtn{ width: 32px; height: 32px; cursor: pointer; margin-top: 6px;}
 		.btn__callbtn .glyphicon{ padding-top: 4px;}
-
 		.radius--left{border-radius: 4px 0 0 4px !important;}
 		.radius--right{border-radius: 0 4px 4px 0 !important;}
-		body {
-			padding-left: 0px;
-			padding-right: 0px;
-			margin: 0;
-			height: 100%;
-		}
-
-		html {
-			height: 100%;
-		}
-
-
-		/* Map */
-		#map {
-			position: absolute;
-			top: 52px;
-
-			left: 0px;
-			bottom: 0px;
-			width: 100% !important;
-			z-index: 0;
-		}
-
+		#map { position: absolute; top: 52px; left: 0px; bottom: 0px; width: 100% !important; z-index: 0;}
 
 	</style>
 
@@ -74,7 +52,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Zahrajme.cz</a>
+				<a class="navbar-brand" href="#">Zahrajeme.cz</a>
+
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 
@@ -89,7 +68,14 @@
 				<div class="col-xs-12 col-sm-12">
 					<div class="input-group">
 						<div class="input-group-btn">
-						<input class="form-control radius--left" type="text" placeholder="Sport"/>
+							<select class="form-control radius--left">
+								<option>Sport</option>
+								<option>Tenis</option>
+								<option>Osadnici z Katanu</option>
+								<option>Šachy</option>
+								<option>Badminton</option>
+							</select>
+
 						</div>
 						<div class="input-group-btn">
 							<input class="form-control radius--right" type="text" placeholder="Adresa"/>
