Remove css from index

--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,6 @@
 
 	<style>
 
-		.search__box input[type="text"]{margin: 15px 0; padding: 0 10px;}
-		.list_group__box{padding: 0 14px; margin-top: calc(100vh - 240px); box-shadow: none; }
-		.btn__play{text-decoration: none;}
-		.btn__play span.btn{ padding: 4px 2px;}
-		.navbar {border-radius: 0px;}
-		.col__list{padding:  0 2px; }
-		.list-group-item{padding: 10px 5px;}
-		.active__title{ display: inline-block; margin: 10px 20px 10px 0;}
-		.btn__callbtn{ width: 32px; height: 32px; cursor: pointer; margin-top: 6px;}
-		.btn__callbtn .glyphicon{ padding-top: 4px;}
-		.radius--left{border-radius: 4px 0 0 4px !important;}
-		.radius--right{border-radius: 0 4px 4px 0 !important;}
-		#map { position: absolute; top: 52px; left: 0px; bottom: 0px; width: 100% !important; z-index: 0;}
 
 	</style>
 
@@ -104,7 +91,7 @@
 						</div>
 					</div>
 					<div class="col__list col-xs-2 col-sm-2"><a href="#" class="btn__play">
-						<span class="btn btn-success btn-sm btn-block pull-right btn__callbtn"><span class="glyphicon glyphicon-chevron-right"></span>
+						<span class="btn btn-success btn-sm pull-right btn__callbtn"><span class="glyphicon glyphicon-chevron-right"></span>
 						</span></a></div>
 					<div class="clearfix"></div>
 				</div>
@@ -119,7 +106,7 @@
 						</div>
 					</div>
 					<div class="col__list col-xs-2 col-sm-2"><a href="#" class="btn__play">
-						<span class="btn btn-success btn-sm btn-block pull-right btn__callbtn"><span class="glyphicon glyphicon-chevron-right"></span>
+						<span class="btn btn-success btn-sm pull-right btn__callbtn"><span class="glyphicon glyphicon-chevron-right"></span>
 						</span></a></div>
 					<div class="clearfix"></div>
 				</div>
@@ -134,7 +121,7 @@
 						</div>
 					</div>
 					<div class="col__list col-xs-2 col-sm-2"><a href="#" class="btn__play">
-						<span class="btn btn-success btn-sm btn-block pull-right btn__callbtn"><span class="glyphicon glyphicon-chevron-right"></span>
+						<span class="btn btn-success btn-sm pull-right btn__callbtn"><span class="glyphicon glyphicon-chevron-right"></span>
 						</span></a></div>
 					<div class="clearfix"></div>
 				</div>
