--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,6 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="mobile-web-app-capable" content="yes">
 
-	<style>
-
-
-	</style>
-
 
 	<link rel="stylesheet" href="build/screen.css">
 
@@ -51,25 +46,25 @@
 
 	<div class="container">
 		<div class="row">
-			<form role="form" action="">
-				<div class="col-xs-12 col-sm-12">
-					<div class="input-group">
-						<div class="input-group-btn">
-							<select class="form-control radius--left">
-								<option>Sport</option>
-								<option>Tenis</option>
-								<option>Osadnici z Katanu</option>
-								<option>Šachy</option>
-								<option>Badminton</option>
-							</select>
 
-						</div>
-						<div class="input-group-btn">
-							<input class="form-control radius--right" type="text" placeholder="Adresa"/>
-						</div>
+			<div class="col-xs-12 col-sm-12">
+				<div class="input-group">
+					<div class="input-group-btn">
+						<select class="form-control radius--left">
+							<option>Sport</option>
+							<option>Tenis</option>
+							<option>Osadnici z Katanu</option>
+							<option>Šachy</option>
+							<option>Badminton</option>
+						</select>
+
+					</div>
+					<div class="input-group-btn">
+						<input id="geoJumper" class="form-control radius--right" type="text" placeholder="Adresa"/>
 					</div>
 				</div>
-			</form>
+			</div>
+
 
 		</div>
 
@@ -131,6 +126,7 @@
 		</div>
 	</div>
 
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 	<script src="build/app.js"></script>
 
 </body>
