--- a/public/offer.html
+++ b/public/offer.html
@@ -20,7 +20,6 @@
 
 	<style>
 
-
 	</style>
 
 
@@ -32,54 +31,57 @@
 
 	<nav class="navbar navbar-inverse navbar-static" role="navigation">
 		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+
 				<a class="navbar-brand" href="#">Zahrajeme.cz</a>
 
-			</div>
-			<div id="navbar" class="navbar-collapse collapse">
 
-			</div><!--/.navbar-collapse -->
+			<ul class="nav navbar-nav pull-right">
+				<li><a href="#"><div class="add_entry__link"><div class="entry_text">Vyberte umístění aktivity na mapě</div><span class="add__icon glyphicon glyphicon-screenshot"></span></div></a></li>
+			</ul>
+
+		</div>
+
 		</div>
 	</nav>
 
-
+	<div id="map"></div>
 	<div class="container">
 		<div class="row">
-			<form role="form" action="">
-				<div class="col-xs-12 col-sm-12">
-					<div class="input-group">
-						<div class="input-group-btn">
-							<select class="form-control radius--left">
-								<option>Sport</option>
-								<option>Tenis</option>
-								<option>Osadnici z Katanu</option>
-								<option>Šachy</option>
-								<option>Badminton</option>
-							</select>
+			<div class="list_group__box--offer list-group">
 
-						</div>
-						<div class="input-group-btn">
-							<input class="form-control radius--right" type="text" placeholder="Adresa"/>
-						</div>
+				<div class="list-group-item">
+
+						<h4 class="offer_title">Vytvořit aktivitu</h4>
+					<div class="col__list col-xs-6 col-sm-6">
+						<select class="form-control">
+							<option>Sport</option>
+							<option>Tenis</option>
+							<option>Osadnici z Katanu</option>
+							<option>Šachy</option>
+							<option>Badminton</option>
+						</select>
 					</div>
+					<div class="offer-primary-field"></div>
+					<div class="col__list col-xs-6 col-sm-6">
+						<input class="form-control" type="text" placeholder="Datum"/>
+					</div>
+					<div class="clearfix"></div>
+
+					<div class="offer-filed--divider"></div>
+
+					<div class="col__list col-xs-6 col-sm-6">
+						<input class="form-control" type="text" placeholder="Kontakt"/>
+					</div>
+					<div class="col__list col-xs-6 col-sm-6">
+							<input class="form-control btn btn-success" type="submit" value="Vložit"/>
+					</div>
+					<div class="clearfix"></div>
+
 				</div>
-			</form>
 
-		</div>
 
-</div>
 
-			<div id="map"></div>
-
-	<div class="container">
-		<div class="row">
-
+			</div>
 		</div>
 	</div>
 
