--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
 
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 	<script defer src="build/app.js"></script>
+
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
